apps/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-outpost
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
spec:
  hostnames:
  - '*.${DOMAIN}'
  - '*.infra.${DOMAIN}'
  - '*.${DOMAIN}'
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: websecure
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /outpost.goauthentik.io
    backendRefs:
    - name: ak-outpost-authentik-embedded-outpost  # Usa il servizio outpost diretto
      port: 9000
